--- a/businessautomation-sub.yaml
+++ b/businessautomation-sub.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
  name: businessautomation-sub
- namespace: rhdm-setup-test
+ namespace: business-central-automation
 spec:
  channel: stable
  name: businessautomation-operator
